Thu May 14 21:06:11 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/raritan-mib.h: use the outlets template mechanism and remove all
   the OIDs defines for a better readability.
 - drivers/snmp-ups.c: enable Raritan MIB back
 
Thu May 14 19:19:52 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/eaton-aphel-mib.h: use the outlets template mechanism.

Thu May 14 14:44:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - docs/configure.txt: a bit of completion and standardisation.

Thu May 14 14:23:41 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/snmp-ups.[ch]: add a template mechanism for outlets declaration, and
   the needed helpers. Also disable temporarily the Raritan MIB as it conflicts
   with Eaton (Aphel) .

Wed May 13 13:54:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - man/Makefile.am, man/nut.conf.5: add a manpage for nut.conf
   (patch from Debian BTS, #528222)

Tue May 05 13:26:21 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/apcsmart.h: add support for older SmartUPS 600 responding to other
   D codes (D7, D8 and D9)
   (patch from Konstantin 'Kastus' Shchuka)

Tue May 05 02:01:13 UTC 2009 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c, man/tripplite_usb.8, data/driver.list: update list
   of units tested with tripplite_usb

Mon May 04 08:11:01 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/apcsmart.[ch]: add support for older SmartUPS, which do not respond
   to the ^Z, a or b commands (used to inquire the supported data)
   (patch from Thomas Juerges)

Thu Apr 30 21:20:42 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: add Apollo 1000A and 1000F compatibility with genericups
   upstype=4 (reported by mvochin)

Thu Apr 23 12:46:12 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - man/snmp-ups.8: remove the EXPERIMENTAL section to the profit of a LIMITATION
   section.
