@@ -207,14 +207,15 @@ powerman_pdu_LDADD = $(LDADD) $(LIBPOWERMAN_LDFLAGS)
 # tracking (which is automatic), but to ensure these files are
 # distributed by "make dist".
 
-dist_noinst_HEADERS = apccmib.h apc-hid.h apcsmart.h bcmxcp.h bcmxcp_io.h belkin.h	\
- belkin-hid.h blazer.h cps-hid.h dstate.h dstate-hal.h dummy-ups.h eaton-aphel-mib.h	\
- explore-hid.h gamatronic.h genericups.h hidparser.h hidtypes.h ietfmib.h libhid.h	\
- libshut.h libusb.h liebert-hid.h main.h main-hal.h megatec.h mge-hid.h mgemib.h	\
- mge-shut.h mge-utalk.h mge-xml.h microdowell.h netvisionmib.h netxml-ups.h nut_usb.h oneac.h	\
+dist_noinst_HEADERS = apccmib.h apc-hid.h apcsmart.h baytechmib.h bcmxcp.h	\
+ bcmxcp_io.h belkin.h belkin-hid.h blazer.h cps-hid.h dstate.h dstate-hal.h	\
+ dummy-ups.h eaton-aphel-mib.h explore-hid.h gamatronic.h genericups.h		\
+ hidparser.h hidtypes.h ietfmib.h libhid.h libshut.h libusb.h liebert-hid.h	\
+ main.h main-hal.h megatec.h mge-hid.h mgemib.h mge-shut.h mge-utalk.h		\
+ mge-xml.h microdowell.h netvisionmib.h netxml-ups.h nut_usb.h oneac.h		\
  powercom.h powerpanel.h powerp-bin.h powerp-txt.h pwmib.h raritan-mib.h	\
- safenet.h serial.h snmp-ups.h solis.h tripplite.h tripplite-hid.h upshandler.h		\
- usb-common.h usbhid-ups.h
+ safenet.h serial.h snmp-ups.h solis.h tripplite.h tripplite-hid.h 			\
+ upshandler.h usb-common.h usbhid-ups.h
 
 # Define a dummy library so that Automake builds rules for the
 # corresponding object files.  This library is not actually built,
